<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ProfileActivity">

    <com.google.android.material.imageview.ShapeableImageView

        android:id="@+id/garfield"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/garfild"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/garfield"
        app:layout_constraintLeft_toRightOf="@id/photo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="130dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:srcCompat="@mipmap/ic_launcher"
        app:strokeColor="@android:color/white"
        app:strokeWidth="5dp" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/photo"
        app:layout_constraintLeft_toLeftOf="@id/photo"
        app:layout_constraintRight_toRightOf="@id/photo"
        app:layout_constraintTop_toTopOf="@id/photo" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/userName"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_add_circle_white_24dp"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:text="@string/button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#e5e6eb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:text="@string/city"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_place_24px"
        app:layout_constraintBottom_toTopOf="@+id/work"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="171dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:autofillHints="no"
        android:visibility="gone"
        android:hint="@string/editText"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/work"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button"
        android:text="@string/edit"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/city"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintTop_toTopOf="@+id/barrier2" />

    <TextView
        android:id="@+id/work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:text="@string/work"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_business_center_24px"
        app:layout_constraintBottom_toTopOf="@+id/study"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/study"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:text="@string/study"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_graduation_hat"
        app:layout_constraintBottom_toTopOf="@+id/homeTown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work" />

    <TextView
        android:id="@+id/homeTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:text="@string/homeTown"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_house_24px"
        app:layout_constraintBottom_toTopOf="@+id/maritalStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/study" />

    <TextView
        android:id="@+id/maritalStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:text="@string/maritalStatus"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTown" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="city" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>